# quarto-personal

./: .gitignore  README.md  Taskfile.yml  _brand.yml  _quarto.yml  about.qmd  guides-index.qmd  index.qmd  portfolio-index.qmd  pyproject.toml
.github/workflows/: deploy-with-reusable.yml  deploy.yml
_freeze/guides/creating-a-slideshow/index/execute-results/: html.json
_freeze/guides/post-with-code/index/execute-results/: html.json  tex.json
_freeze/guides/setting-up-webserver/index/execute-results/: html.json
documents/: athena-pitch.qmd
guides/: _metadata.yml
guides/adding-a-post/: index.qmd
guides/adding-a-site-with-backend/: index.qmd
guides/adding-a-static-site/: index.qmd
guides/creating-a-slideshow/: demo-presentation.qmd  index.qmd
guides/post-with-code/: index.qmd
guides/setting-up-webserver/: index.qmd
portfolio/: _metadata.yml
portfolio/25-04-27-daily-posts/: index.qmd
portfolio/25-04-28-ml-monday-lg-with-mcp/: index.qmd
portfolio/25-04-29-/: index.qmd
portfolio/athena-admin-dash/: index.qmd
portfolio/athena-examples/: looking-up-reflex-doc.qmd  translating-docs-to-code.qmd
portfolio/athena-github-vectorization/: index.qmd
portfolio/athenainstruments/: index.qmd
portfolio/daily-posts/: index.qmd
portfolio/datalogging-service/: ceralog.qmd  ceraserver.qmd  ceraviz.qmd  index.qmd
portfolio/mcp-chat-app/: index.qmd
portfolio/ml-monday-lg-with-mcp/: index.qmd
presentations/: _metadata.yml  athena-pitch-deck.qmd  demo-presentation.qmd  mixed-separators.qmd  only-h2-separators.qmd
themes/: theme-dark.scss
(+1 files in other folders)
