[project]
name = "quarto-personal"
version = "0.1.0"
description = "This manages the python dependencies for the Quarto rendering process."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "redis>=5.2.1",
    "statsmodels>=0.14.4",
]
